clusters/home/apps/cloud/nextcloud/app/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    external-dns.kubernetes.io/hostname: "cloud.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.layertwo.dev`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
